# Lyric-Immersion-and-Karaoke

./: .gitignore  .mailmap  AGENTS.md  AGENT_HANDOFF.md  ARCHITECTURE.md  BUILD.md  DesktopKaraoke.spec  HANDOVER-2026-07-04.md  ISSUES.md  LICENSE  LYRIC_PERFORMANCE.md  PERFORMANCE.md  README.md  RESEARCH.md  SECURITY.md  USAGE.md  add_lrc.py  align.py  api.py  appdata.py  audible_sessions.py  audit_cache.py  build.bat  build_1057e.err  build_1058.err  build_1059.err  character.py  concert_audio.py  concert_ocr.py  confidence.py  deep_transcribe.py  discord_rpc.py  fetch_lyrics.py  gairaigo.py  gpu_renderer.py  gpu_setup.py  install_extras.bat  installer.iss  llm_disambiguate.py  main.py  (+25 more)
bundled_lyrics/: feelingradation.json  サクラミラージュ.json
dev-console/: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
dev-console/src-tauri/: Cargo.toml  tauri.conf.json
dev-console/src-tauri/capabilities/: default.json
dev-console/src-tauri/src/: lib.rs  main.rs
docs/: AGENT_HANDOFF.md  ARCHITECTURE.md  AUTORESEARCH.md  BUILD.md  CONCERT_AUDIO_SYNC.md  CONCERT_DETECTION.md  CONCERT_RESEARCH.md  DEPLOYMENT.md  DEV_CONSOLE.md  GENERATION.md  HANDOFF-cover-sync-resume.md  ISSUES.md  LYRIC_PERFORMANCE.md  PERFORMANCE.md  PORTING.md  README.md  REPO_ORGANIZATION.md  RESEARCH.md  SALES_CONSIDERATIONS.md  STORE_SUBMISSION.md  SUBTITLES_MODEL_API.md  USAGE.md  concerts.yaml
packaging/: AppxManifest.template.xml  after_install.txt  build_msix.ps1
research/: arms.json  playlist.json
(+59 files in other folders)
