[package]
name = "lyric-immersion-dev-console"
version = "0.1.0"
description = "Developer GUI for Lyric Immersion and Karaoke"
authors = ["BarnsL <barnsl@pm.me>"]
edition = "2021"

[lib]
name = "lyric_immersion_dev_console_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true
